# fog_msgs

./: CHANGELOG.rst  CMakeLists.txt  Dockerfile  Dockerfile.build_deb  Dockerfile.build_env  README.md  build.sh  build_deb.sh  package.xml
.github/workflows/: main.yaml  update-rclgo-msgs.yaml
action/: ControlInterfaceAction.action  NavigationAction.action
msg/: AlivePriorities.msg  AlivePriority.msg  AtomicMission.msg  Body.msg  Body2.msg  ControlInterfaceDiagnostics.msg  ControlInterfaceMissionProgress.msg  ControlInterfaceMissionState.msg  ControlInterfaceVehicleState.msg  DeviceParameters.msg  DeviceParametersArray.msg  FixedwingTakeoffLanding.msg  FixedwingTask.msg  MeshQos.msg  MeshQosArray.msg  MetaMission.msg  Mission.msg  MissionProgress.msg  MissionStatus.msg  MissionSyncPermission.msg  NavigationDiagnostics.msg  ObjectLost.msg  OdometryDiagnostics.msg  OdometryType.msg  PathSet.msg  RobotAliveInfo.msg  RobotAliveInfos.msg  RobotPriority.msg  RobotPrioritySync.msg  SearchMission.msg  SearchMissionArray.msg  SearchPath.msg  SearchPathArray.msg  SearchRegion.msg  SearchRegionArray.msg  SearchTeamRegion.msg  SearchTeamRegions.msg  Status2.msg  StatusEvent.msg  Team.msg  (+7 more)
msg/control_interface/: ControlInterfaceDiagnostics.msg  ControlInterfaceMissionState.msg  ControlInterfaceVehicleState.msg  MissionItem.msg  MissionPlan.msg
msg/fog_bumper/: ObstacleSectors.msg
msg/navigation/: FutureTrajectory.msg  NavigationDiagnostics.msg  NavigationState.msg  NavigationWaypointState.msg
msg/odometry/: Heading.msg
packaging/: package.sh
srv/: BridgeConfig.srv  ChangeEstimator.srv  ChangeOdometry.srv  GetOrigin.srv  Path.srv  PathToLocal.srv  SetPx4ParamInt.srv  WaypointToLocal.srv
srv/control_interface/: GetPx4ParamFloat.srv  GetPx4ParamInt.srv  SetPx4ParamFloat.srv  WaypointToLocal.srv
