<?xml version="1.0"?>
<package format="3">

  <name>fog_msgs</name>
  <version>0.1.1</version>
  <description>The fog_msgs package</description>

  <author email="baca@fly4future.com">Tomas Baca</author>
  <maintainer email="baca@fly4future.com">Tomas Baca</maintainer>
  <maintainer email="matous.vrba@fly4future.com">Matouš Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
